--- a/Pet Shop - Root/css/style.css
+++ b/Pet Shop - Root/css/style.css
@@ -1,3 +1,11 @@
+a{
+    text-decoration: none;
+}
+
+body {
+    margin: 0px;
+}
+
 /*Header: Menu navegación 1*/
 
 .menu_nav_1 {
@@ -11,10 +19,16 @@
     display: flex;
 }
 
+nav>label {
+    position: relative;
+    top: 2.5px;
+}
+
 div{
     position: absolute;
     right: 30px;
 }
+
 
 /*Header: Logo y Menu navegación 2*/
 
@@ -22,7 +36,8 @@ div{
     background-color:#F0A83E;
     color: #FFFFFF;
     font-family: 'Roboto', sans-serif;
-    font-weight: 400;
+    font-weight: 100;
+    line-height: 15px;
     font-size: 13px;
     height: 62px;
 }
@@ -35,6 +50,8 @@ div{
 
 .categoria li {
     display: inline;
+    position: relative;
+    bottom: 10px;
 }
 
 #Logo {
@@ -42,17 +59,19 @@ div{
     width: 166.38px;
     height: 23px;
     left: 40px;
-    top: 50px;
+    top: 40px;
 }
 
-a {
+nav>div>ul>li>a {
     text-decoration: none;
     font-family: 'Roboto', sans-serif;
     font-weight: normal;
     font-size: 13px;
     line-height: 15px;
     color: #FFFFFF;
+    padding-right: 10px;
 }
+
 
 /*Main: Seccion Bowl*/
 
@@ -60,6 +79,251 @@ a {
     background-image: url("../img/bowl-and-pet-daities-on-green-background\ 1.png");
     background-size: cover;
     height: 409px;
+    position: relative;
+    bottom: 20px;
 }
+
+.titulo-portada {
+    background-color: #FFFFFF;
+    border-radius: 5px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    font-size: 30px;
+    color:#3C2313;
+    position: absolute;
+    top: 200px;
+}
+
+.subtitulo-portada {
+    font-family:'Roboto', sans-serif;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 19px;
+    text-align: center;
+    color: #3C2313;
+    position: absolute;
+    top: 257px;
+    right: 110px;
+}
+
+.titulo3 {
+    background-color: #F0A83E;
+    border-radius: 5px;
+    font-family:'Roboto', sans-serif;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 19px;
+    text-align: center;
+    position: absolute;
+    top: 290px;
+    right: 150px;
+    padding: 15px
+}
+
+section>p>a {
+    color:#FFFFFF;
+}
+
+
+/*Main: Seccion Productos Destacados*/
+
+.paw {
+    display: block;
+    margin: auto;
+}
+
+h1 {
+    text-align: center;
+    font-family:'Roboto', sans-serif;
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 47px;
+    color: #3C2313;
+    margin: auto;
+}
+
+.Menu_2 li {
+    display: inline;
+    position: relative;
+    left:40%;
+    right: 60%;
+}
+
+section>ul>li>a {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 15px;
+    line-height: 18px;
+    color: #666666;
+}
+
+.dest {
+    font-family: Roboto;
+font-style: normal;
+font-weight: 500;
+font-size: 15px;
+line-height: 18px;
+color: #3C2313;
+}
+
+.dest2 {
+    font-family: Roboto;
+font-style: normal;
+font-weight: 500;
+font-size: 15px;
+line-height: 18px;
+color: #F0A83E;
+}
+
+/* Main: Seccion Contactenos */
+
+.contact {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 25px;
+    line-height: 29px;
+    color: #3C2313;
+    position: relative;
+    left: 45%;
+    right: 55%;
+}
+
+#Contactenos {
+    position: relative;
+}
+
+.form1 {
+    background-color: #3C2313;
+    border-radius: 15px;
+    position: absolute;
+    width: 340px;
+    height: 40px;
+    left: calc(50% - 340px/2 + 1px);
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 9px;
+    line-height: 11px;
+    color: #FFFFFF;
+    padding-top: 15px;
+    padding-left: 10px;
+    box-sizing: border-box;
+}
+
+.form2 {
+    background-color: #3C2313;
+    border-radius: 15px;
+    position: absolute;
+    width: 340px;
+    height: 40px;
+    left: calc(50% - 340px/2 + 1px);
+    top: calc(50% - 40px/2 + 70px);
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 9px;
+    line-height: 11px;
+    color: #FFFFFF;
+    padding-top: 15px;
+    padding-left: 10px;
+    box-sizing: border-box;
+}
+
+.form3 {
+    background-color: #3C2313;
+    border-radius: 15px;
+    position: absolute;
+    width: 340px;
+    height: 40px;
+    left: calc(50% - 340px/2 + 1px);
+    top: calc(50% - 40px/2 + 120px);
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 9px;
+    line-height: 11px;
+    color: #FFFFFF;
+    padding-top: 15px;
+    padding-left: 10px;
+    box-sizing: border-box;
+}
+
+/* Footer: Parte 1 */
+
+footer {
+    position: relative;
+    top: 160px;
+}
+
+footer>p{
+    background-color: #F0A83E;
+    height: 60px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 23px;
+    color: #FFFFFF;
+    box-sizing: border-box;
+    padding-left: 20px;
+    padding-top: 10px;
+}
+
+/* Footer: Parte 2 */ 
+
+.datos {
+    background-color: #3C2313;
+    position: relative;
+    bottom: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+footer>ul>li>span {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 23px;
+    color: #FFFFFF;
+}
+
+footer>ul>li {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 10px;
+    line-height: 12px;
+    color: #8A8787;
+}
+
+footer>img {
+    position: absolute;
+    right: 30px;
+    top: 200px;
+}
+
+
+/* Footer: Parte 3 */ 
+.derechos {
+    background-color: #222222;
+    color: #F3F3F3;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    font-size: 12px;
+    padding-left: 100px;
+    height: 20px;
+    position: relative;
+    bottom: 40px;
+    text-align: center;
+    padding-top: 0px;
+    padding-bottom: 0px;
+}
+
+
+
+
 
 
